Começando estrutura html

--- a/index.html
+++ b/index.html
@@ -6,22 +6,42 @@
     <title>Meu Site</title>
 </head>
 <body>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Sobre</a>
-        <a href="#">Contato</a>
-    </nav>
-
-
+    <div id="page"></div>
+    <img src="" alt="">
     <main>
-        <section id="#Home"></section>
-            <h2>Bom te ver aqui no meu site</h2>
-            <p>Seja bem-vindo ao meu site pessoal. Aqui você encontrará informações sobre mim e meus projetos.</p>
-        <section id="#Sobre"></section>
-            <h2>Meu Blog</h2>
-            <p>Este é o meu blog onde compartilho minhas ideias e pensamentos.</p>
-        <section id="#Contato"></section>
-            <h2>Contato</h2>
-            <p>Você pode entrar em contato comigo através do email: contato@meusite.com</p>
+    <section id="about">
+        <h1>Filé mignon com molho mostarda</h1>
+        <p>Uma opção fácil, rápida e deliciosa para o almoço? Temos! Com poucos ingredientes dá para ter um prato clássico e delicioso. 
+        O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
+        O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
+        <h2>Porções</h2>
+            <p>2 pessoas</p>
+        <h2>Tempo de Preparo</h2>
+            <p>10 minutos</p>
+        <h2>Tempo de cozimento</h2>
+            <p>10 minutos</p>
+       <h2>Pronto em</h2>
+            <p>20 minutos</p>
+
+        <h2>Ingredientes</h2>
+        <ul>
+       <li> 2 medalhões de filé mignon</li>
+       <li> 1 colher (café) de sal</li>
+       <li> 1 colher (café) de pimenta-do-reino preta em pó</li>
+       <li> 1 colher de sopa de azeite de oliva extra virgem</li>
+       <li> 1/2 xícara de chá de creme de leite fresco</li>
+       <li> 1 colher de sopa de Mostarda Hellmann's</li>
+        <li> 1 colher de chá de manteiga</li>
+        </ul>
+    
+      <h2>Modo de Preparo</h2>
+          <p>Tempere os filés mignon com sal e pimenta do reino.
+            <br>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de cada lado para carne ao ponto).
+            <br>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até obter a consistência desejada.
+            <br>Sirva os medalhões com o molho de mostarda.
+        </p>
+    </section>
+    <section id="ingredients"></section>
+    <section id="preparation"></section>
     </main>
 </body>
