--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>Página de Receita</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="page"></div>
-    <img src="" alt="">
+    <img src="assets/main-image.jpg" alt="Imagem de um prato de filé mignon com molho mostarda">
     <main>
     <section id="about">
         <h1>Filé mignon com molho mostarda</h1>
