"Mudança na estrutura no html

--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
         <p>Uma opção fácil, rápida e deliciosa para o almoço? Temos! Com poucos ingredientes dá para ter um prato clássico e delicioso. 
         O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
         O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
-        <h2>Porções</h2>
-            <p>2 pessoas</p>
-        <h2>Tempo de Preparo</h2>
-            <p>10 minutos</p>
-        <h2>Tempo de cozimento</h2>
-            <p>10 minutos</p>
-       <h2>Pronto em</h2>
-            <p>20 minutos</p>
+        <h2>Porções Tempo de Preparo Tempo de cozimento Pronto em</h2>
+            <p>2 pessoas 10 minutos 10 minutos 20 minutos</p>
 
+            
         <h2>Ingredientes</h2>
         <ul>
        <li> 2 medalhões de filé mignon</li>
