Ajustando a página inicial

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <header>
-        <nav>
-            <ul>
+        <img id="logo" src="assets/115359334.avif" alt="hellmann logo">
+        <nav id="navbar">
+            <ul id="cabeçalho-menu">
                 <li>Produtos</li>
                 <li>Receitas Irresistíveis</li>
                 <li>Modo de Preparo</li>
+                <li>Pesquisar</li>
             </ul>
         </nav>
     </header>
@@ -33,7 +34,7 @@
                         <p>2 pessoas 10 minutos Tempo de cozimento 20 minutos</p>
                 </section>
         </section>
-        <section id="andar-baixo">
+       <!-- <section id="andar-baixo">
                     <section id="ingredientes">
                         <h2>Ingredientes</h2>
                         <ul id="lista-ingredientes">
@@ -58,42 +59,7 @@
         </section>
             <footer>
                 <p>Feito pelo little second</p>
-            </footer>
+            </footer>-->
         </div>
-=======
-    <div id="page"></div>
-    <img src="assets/main-image.jpg" alt="Imagem de um prato de filé mignon com molho mostarda">
-    <main>
-    <section id="about">
-        <h1>Filé mignon com molho mostarda</h1>
-        <p>Uma opção fácil, rápida e deliciosa para o almoço? Temos! Com poucos ingredientes dá para ter um prato clássico e delicioso. 
-        O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
-        O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
-        <h2>Porções Tempo de Preparo Tempo de cozimento Pronto em</h2>
-            <p>2 pessoas 10 minutos 10 minutos 20 minutos</p>
-
-            
-        <h2>Ingredientes</h2>
-        <ul>
-       <li> 2 medalhões de filé mignon</li>
-       <li> 1 colher (café) de sal</li>
-       <li> 1 colher (café) de pimenta-do-reino preta em pó</li>
-       <li> 1 colher de sopa de azeite de oliva extra virgem</li>
-       <li> 1/2 xícara de chá de creme de leite fresco</li>
-       <li> 1 colher de sopa de Mostarda Hellmann's</li>
-        <li> 1 colher de chá de manteiga</li>
-        </ul>
-    
-      <h2>Modo de Preparo</h2>
-          <p>Tempere os filés mignon com sal e pimenta do reino.
-            <br>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de cada lado para carne ao ponto).
-            <br>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até obter a consistência desejada.
-            <br>Sirva os medalhões com o molho de mostarda.
-        </p>
-    </section>
-    <section id="ingredients"></section>
-    <section id="preparation"></section>
->>>>>>> f23c8279f3cbf7a39915a97fb7ee973578c36548
-    </main>
 </body>
 </html>
