alinhando imagem do relógio

--- a/index.html
+++ b/index.html
@@ -27,8 +27,18 @@
                 <p>Uma opção fácil, rápida e deliciosa para o almoço? Temos! Com poucos ingredientes dá para ter um prato clássico e delicioso. 
                     O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
                     O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
-                    
-                    <h2>Porções Tempo de Preparo Tempo de cozimento Pronto em</h2>
+                <section id="relogio">
+                    <img id="relogio-porcao" src="assets/relogio.png" alt="ícone de relógio">
+                    <img id="relogio-tempo-de-preparo" src="assets/relogio.png" alt="ícone de relógio">
+                    <img id="relogio-tempo-de-cozimento" src="assets/relogio.png" alt="ícone de relógio">
+                    <img id="relogio-pronto-em" src="assets/relogio.png" alt="ícone de relógio">
+                </section>
+                    <ul id="atributos-de-preparacao-agrupados">
+                        <li id="porção">PORÇÕES</li>
+                        <li id="tempo-de-preparo">TEMPO DE PREPARO</li>
+                        <li id="tempo-de-cozimento">TEMPO DE COZIMENTO</li>
+                        <li id="pronto-em">PRONTO EM</li>
+                    </ul>
                     <p>2 pessoas 10 minutos Tempo de cozimento 20 minutos</p>
                 </section>
             </section>
@@ -54,10 +64,10 @@
                     Sirva os medalhões com o molho de mostarda.
                 </p>
             </section>
-        </section>
+        </section>-->
             <footer>
                 <p>Feito pelo little second</p>
-            </footer>-->
+            </footer>
         </div>
 </body>
 </html>
