--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
                 <p>Uma opção fácil, rápida e deliciosa para o almoço? Temos! Com poucos ingredientes dá para ter um prato clássico e delicioso. 
                     O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
                     O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
-                <section id="relogio">
-                    <img id="relogio-porcao" src="assets/relogio.png" alt="ícone de relógio">
-                    <img id="relogio-tempo-de-preparo" src="assets/relogio.png" alt="ícone de relógio">
-                    <img id="relogio-tempo-de-cozimento" src="assets/relogio.png" alt="ícone de relógio">
-                    <img id="relogio-pronto-em" src="assets/relogio.png" alt="ícone de relógio">
+                <section class="relogio">
+                    <img class="relogio porcao" src="assets/relogio.png" alt="ícone de relógio">
+                    <img class="relogio tempo-de-preparo" src="assets/relogio.png" alt="ícone de relógio">
+                    <img class="relogio tempo-de-cozimento" src="assets/relogio.png" alt="ícone de relógio">
+                    <img class="relogio pronto-em" src="assets/relogio.png" alt="ícone de relógio">
                 </section>
-                    <ul id="atributos-de-preparacao-agrupados">
-                        <li id="porção">PORÇÕES</li>
-                        <li id="tempo-de-preparo">TEMPO DE PREPARO</li>
-                        <li id="tempo-de-cozimento">TEMPO DE COZIMENTO</li>
-                        <li id="pronto-em">PRONTO EM</li>
+                    <ul class="atributos-de-preparacao-agrupados">
+                        <li class="atributos-de-preparacao-agrupados porcao">PORÇÕES</li>
+                        <li class="atributos-de-preparacao-agrupados tempo-de-preparo">TEMPO DE PREPARO</li>
+                        <li class="atributos-de-preparacao-agrupados tempo-de-cozimento">TEMPO DE COZIMENTO</li>
+                        <li class="atributos-de-preparacao-agrupados pronto-em">PRONTO EM</li>
+                        <li class="atributos-de-preparacao-agrupados porcao-texto">2 porções</li>
+                        <li class="atributos-de-preparacao-agrupados tempo-de-preparo-texto">10 minutos</li>
+                        <li class="atributos-de-preparacao-agrupados tempo-de-cozimento-texto">10 minutos</li>
+                        <li class="atributos-de-preparacao-agrupados pronto-em-texto">20 minutos</li>
                     </ul>
-                    <p>2 pessoas 10 minutos Tempo de cozimento 20 minutos</p>
                 </section>
             </section>
             <!-- <section id="andar-baixo">
@@ -64,7 +67,7 @@
                     Sirva os medalhões com o molho de mostarda.
                 </p>
             </section>
-        </section>-->
+        </section> -->
             <footer>
                 <p>Feito pelo little second</p>
             </footer>
