--- a/index.html
+++ b/index.html
@@ -7,89 +7,113 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- cabeçalho da página -->
+
+                                    <!-- cabeçalho da página -->
+
     <header>
         <img id="logo" src="assets/115359334.avif" alt="hellmann logo">
         <nav class="navbar">
             <ul class="navbar menu">
                 <li>PRODUTOS</li>
                 <li>RECEITAS IRRESISTÍVEIS</li>
-                <li>MODOS DE PREPARO</li>
+                <li>SOBRE HELLMANN'S</li>
             </ul>
         </nav>
-    </header>  
-<!-- página principal da página -->
-    <main class="conteudo-principal">
-    <section class="andar-topo">
-        
-        <div class="page">
-            <section class="page principal-content">
+    </header>
 
-                <img id="main-image" src="assets/main-image.jpg" alt="Filé mignon com molho mostarda">
+                                    <!-- página principal da página -->
 
-                                    <!-- informações básicas da receita -->
+        <main class="conteudo-principal">
 
-                <h1 class="page recipe-name">Filé mignon com molho mostarda</h1>
-                <p class="page descrition-recipe">Uma opção fácil, rápida e deliciosa para o almoço? Temos! 
-                    Com poucos ingredientes dá para ter um prato clássico e delicioso. 
-                    O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
-                    O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
 
-                                    <!-- imagens e textos dos atributos de preparação da receita -->
+        <section class="breadcrumbs">   
+            <a href="#">Home</a> &gt; 
+            <a href="#">Receitas</a> &gt;
+            <a>Filé mignon com molho mostarda</a>
+        </section>
 
-                <section class="page relogio">
-                    <img class="page relogio porcao" src="assets/relogio.png" alt="ícone de relógio">
-                    <img class="page relogio tempo-de-preparo" src="assets/relogio.png" alt="ícone de relógio">
-                    <img class="page relogio tempo-de-cozimento" src="assets/relogio.png" alt="ícone de relógio">
-                    <img class="page relogio pronto-em" src="assets/relogio.png" alt="ícone de relógio">
+
+        <section class="andar-topo">
+
+            <div class="page">
+                <section class="principal-content">
+
+                    <img id="main-image" src="assets/main-image.jpg" alt="Filé mignon com molho mostarda">
+
+                                        <!-- informações básicas da receita -->
+
+                    <h1 class="recipe-name">Filé mignon com molho mostarda</h1>
+                    <p class="descrition-recipe">Uma opção fácil, rápida e deliciosa para o almoço? Temos! 
+                        Com poucos ingredientes dá para ter um prato clássico e delicioso. 
+                        O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você faz rapidamente. 
+                        O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz fresquinho. Experimente!</p>
+
+                                        <!-- imagens e textos dos atributos de preparação da receita -->
+
+                    <section class="porcoes">
+                        <img class="imagem" src="assets/relogio.png" alt="ícone de relógio">
+                        <h3 class="texto">PORÇÕES</h3>
+                        <p class="tempo">2 porções</p>
+                    </section>
+
+                    <section class="tempo-de-preparo">
+                        <img class="imagem" src="assets/relogio.png" alt="ícone de relógio">
+                        <h3 class="texto">TEMPO DE PREPARO</h3>
+                        <p class="tempo">10 minutos</p>
+                    </section>
+
+                    <section class="tempo-de-cozimento">
+                        <img class="imagem" src="assets/relogio.png" alt="ícone de relógio">
+                        <h3 class="texto">TEMPO DE COZIMENTO</h3>
+                        <p class="tempo">10 minutos</p>
+                    </section>
+
+                    <section class="pronto-em">
+                        <img class="imagem"src="assets/relogio.png" alt="ícone de relógio">
+                        <h3 class="texto">PRONTO EM</h3>
+                        <p class="tempo">20 minutos</p>
+                    </section>  
                 </section>
+        </section>
 
-                                    <!-- informações que ficarão abaixo das imagens dos atributos de preparação da receita -->
+                                        <!-- segunda página da receita com ingredientes e modo de preparo -->
 
-                    <ul class="page info-recipe">
-                        <li class="page info-recipe porcao">PORÇÕES</li>
-                        <li class="page info-recipe tempo-de-preparo">TEMPO DE PREPARO</li>
-                        <li class="page info-recipe tempo-de-cozimento">TEMPO DE COZIMENTO</li>
-                        <li class="page info-recipe pronto-em">PRONTO EM</li>
-                        <li class="page info-recipe porcao-texto">2 porções</li>
-                        <li class="page info-recipe tempo-de-preparo-texto">10 minutos</li>
-                        <li class="page info-recipe tempo-de-cozimento-texto">10 minutos</li>
-                        <li class="page info-recipe pronto-em-texto">20 minutos</li>
-                    </ul>
-            </section>
-    </section>
+        <section class="andar-baixo">
+                <section class="ingredients">
+                    <h2 class=" ingredients title">Ingredientes</h2>
+                        <ul class="ingredients list">
+                            <li>2 medalhões de filé mignon</li>
+                            <li>1 colher (café) de sal</li>
+                            <li>1 colher (café) de pimenta-do-reino preta em pó</li>
+                            <li>1 colher de sopa de azeite de oliva extra virgem</li>
+                            <li>1/2 xícara de chá de creme de leite fresco</li>
+                            <li>1 colher de sopa de Mostarda Hellmann's</li>
+                        </ul>
+                </section>   
 
-                                    <!-- segunda página da receita com ingredientes e modo de preparo -->
+                                        <!-- informações da preparação do receita-->
 
-    <section class="andar-baixo">
-            <section class="ingredients">
-                <h2 class=" ingredients title">Ingredientes</h2>
-                    <ul class="ingredients list">
-                        <li>2 medalhões de filé mignon</li>
-                        <li>1 colher (café) de sal</li>
-                        <li>1 colher (café) de pimenta-do-reino preta em pó</li>
-                        <li>1 colher de sopa de azeite de oliva extra virgem</li>
-                        <li>1/2 xícara de chá de creme de leite fresco</li>
-                        <li>1 colher de sopa de Mostarda Hellmann's</li>
-                    </ul>
-            </section>   
+                <section class="preparation">
+                    <h2 class="preparation title">Modo de Preparo</h2>
+                        <ul class="preparation steps">
+                            <li>Tempere os filés mignon com sal e pimenta do reino.</li>
+                            <li>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de cada lado para carne ao ponto).</li>
+                            <li>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até obter a consistência desejada.</li>
+                            <li>Sirva os medalhões com o molho de mostarda.</li>
+                        </ul>
+                </section>
+        </section>
 
-                                    <!-- informações da preparação do receita-->
+        <section class="de volta ao topo">
+            <a href="#topo">Voltar ao topo</a>
+        </section>
+        
+        </main>
 
-            <section class="preparation">
-                <h2 class="preparation title">Modo de Preparo</h2>
-                    <ul class="preparation steps">
-                        <li>Tempere os filés mignon com sal e pimenta do reino.</li>
-                        <li>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de cada lado para carne ao ponto).</li>
-                        <li>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até obter a consistência desejada.</li>
-                        <li>Sirva os medalhões com o molho de mostarda.</li>
-                    </ul>
-            </section>
-    </section>
-    </main>
-            <footer>
-                <p>Feito pelo little second</p>
-            </footer>
-        </div>
+                                    <!-- rodapé da página -->
+                <footer>
+                    <p>Feito pelo little second</p>
+                </footer>
+            </div>
 </body>
 </html>
