--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
                                     <!-- cabeçalho da página -->
 
     <header>
-        <img id="logo" src="assets/115359334.avif" alt="hellmann logo">
         <nav class="navbar">
-            <ul class="navbar menu">
-                <li>PRODUTOS</li>
-                <li>RECEITAS IRRESISTÍVEIS</li>
-                <li>SOBRE HELLMANN'S</li>
-            </ul>
+            <img class="logo" src="assets/115359334.avif" alt="hellmann logo">
+                <ul class="navbar menu">
+                    <li>PRODUTOS</li>
+                    <li>RECEITAS IRRESISTÍVEIS</li>
+                    <li>SOBRE HELLMANN'S</li>
+                </ul>
         </nav>
     </header>
 
@@ -26,10 +26,10 @@
         <main class="conteudo-principal">
 
 
-        <section class="breadcrumbs">   
-            <a href="#">Home</a> &gt; 
-            <a href="#">Receitas</a> &gt;
-            <a>Filé mignon com molho mostarda</a>
+        <section class="breadcrumbs">
+                <a href="#">Home</a>
+                <a href="#">Receitas</a> 
+                <a>Filé mignon com molho mostarda</a>
         </section>
 
 
