sei lá o que eu to fazendo

--- a/index.html
+++ b/index.html
@@ -33,44 +33,50 @@
                 <a>Filé mignon com molho mostarda</a>
             </section>
 
-            <img id="main-image" src="assets/main-image.jpg" alt="Filé mignon com molho mostarda">
 
             <!-- informações básicas da receita -->
             <section class="teste">
-                <h1 class="recipe-name">Filé mignon com molho mostarda</h1>
-                <p class="descrition-recipe">Uma opção fácil, rápida e deliciosa para o almoço? Temos!
-                    Com poucos ingredientes dá para ter um prato clássico e delicioso.
-                    O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você
-                    faz
-                    rapidamente.
-                    O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz
-                    fresquinho. Experimente!</p>
+
+                <img id="main-image" src="assets/main-image.jpg" alt="Filé mignon com molho mostarda">
+                <div class="content">
+                    <div class="title-subtitle">
+                        <h1 class="recipe-name">Filé mignon com molho mostarda</h1>
+                        <p class="descrition-recipe">Uma opção fácil, rápida e deliciosa para o almoço? Temos!
+                            Com poucos ingredientes dá para ter um prato clássico e delicioso.
+                            O filé mignon com molho mostarda é muito simples e rápido, de inspiração francesa e que você
+                            faz
+                            rapidamente.
+                            O molho é super cremoso e vai bem acompanhado de batatas assadas ou uma porção de arroz
+                            fresquinho. Experimente!</p>
+                    </div>
+                    <div class="whooper">
+                        <section class="porcoes">
+                            <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">
+                            <h3 class="texto">PORÇÕES</h3>
+                            <p class="tempo">2 porções</p>
+                        </section>
+
+                        <section class="tempo-de-preparo">
+                            <img class="imagem" src="assets/preparo.png" alt="ícone de relógio">
+                            <h3 class="texto">TEMPO DE PREPARO</h3>
+                            <p class="tempo">10 minutos</p>
+                        </section>
+
+                        <section class="tempo-de-cozimento">
+                            <img class="imagem" src="assets/forno.png" alt="ícone de relógio">
+                            <h3 class="texto">TEMPO DE COZIMENTO</h3>
+                            <p class="tempo">10 minutos</p>
+                        </section>
+
+                        <section class="pronto-em">
+                            <img class="imagem" src="assets/relogio.png" alt="ícone de relógio">
+                            <h3 class="texto">PRONTO EM</h3>
+                            <p class="tempo">20 minutos</p>
+                        </section>
+                    </div>
+                </div>
 
                 <!-- imagens e textos dos atributos de preparação da receita -->
-
-                <section class="porcoes">
-                    <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">
-                    <h3 class="texto">PORÇÕES</h3>
-                    <p class="tempo">2 porções</p>
-                </section>
-
-                <section class="tempo-de-preparo">
-                    <img class="imagem" src="assets/preparo.png" alt="ícone de relógio">
-                    <h3 class="texto">TEMPO DE PREPARO</h3>
-                    <p class="tempo">10 minutos</p>
-                </section>
-
-                <section class="tempo-de-cozimento">
-                    <img class="imagem" src="assets/forno.png" alt="ícone de relógio">
-                    <h3 class="texto">TEMPO DE COZIMENTO</h3>
-                    <p class="tempo">10 minutos</p>
-                </section>
-
-                <section class="pronto-em">
-                    <img class="imagem" src="assets/relogio.png" alt="ícone de relógio">
-                    <h3 class="texto">PRONTO EM</h3>
-                    <p class="tempo">20 minutos</p>
-                </section>
             </section>
         </section>
         </section>
