primeira parte tá feita

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
             <!-- informações básicas da receita -->
-            <section class="teste">
+            <section class="container">
 
                 <img id="main-image" src="assets/main-image.jpg" alt="Filé mignon com molho mostarda">
                 <div class="content">
