falta só 'andar-baixo', 'footer', e a função 'de-volta-ao-topo'

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="whooper">
                         <section class="porcoes">
-                            <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">
+                            <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">  
                             <h3 class="texto">PORÇÕES</h3>
                             <p class="tempo">2 porções</p>
                         </section>
@@ -85,8 +85,8 @@
 
         <section class="andar-baixo">
             <section class="ingredients">
-                <h2 class=" ingredients title">Ingredientes</h2>
-                <ul class="ingredients list">
+                <h2 class="the-title">Ingredientes</h2>
+                <ul class="ingredients-list">
                     <li>2 medalhões de filé mignon</li>
                     <li>1 colher (café) de sal</li>
                     <li>1 colher (café) de pimenta-do-reino preta em pó</li>
@@ -99,8 +99,8 @@
             <!-- informações da preparação do receita-->
 
             <section class="preparation">
-                <h2 class="preparation title">Modo de Preparo</h2>
-                <ul class="preparation steps">
+                <h2 class="the-title">Modo de Preparo</h2>
+                <ul class="preparation-steps">
                     <li>Tempere os filés mignon com sal e pimenta do reino.</li>
                     <li>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de
                         cada lado para carne ao ponto).</li>
