--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
         <!-- segunda página da receita com ingredientes e modo de preparo -->
 
         <section class="andar-baixo">
+            <div id="max-width">
             <section class="ingredients">
                 <h2 class="the-title">Ingredientes</h2>
                 <ul class="ingredients-list">
-                    <li>2 medalhões de filé mignon</li>
-                    <li>1 colher (café) de sal</li>
-                    <li>1 colher (café) de pimenta-do-reino preta em pó</li>
-                    <li>1 colher de sopa de azeite de oliva extra virgem</li>
-                    <li>1/2 xícara de chá de creme de leite fresco</li>
-                    <li>1 colher de sopa de Mostarda Hellmann's</li>
+                    <p>2 medalhões de filé mignon</p>
+                    <p>1 colher (café) de sal</p>
+                    <p>1 colher (café) de pimenta-do-reino preta em pó</p>
+                    <p>1 colher de sopa de azeite de oliva extra virgem</p>
+                    <p>1/2 xícara de chá de creme de leite fresco</p>
+                    <p>1 colher de sopa de Mostarda Hellmann's</p>
                 </ul>
             </section>
 
@@ -100,14 +101,21 @@
 
             <section class="preparation">
                 <h2 class="the-title">Modo de Preparo</h2>
-                <ul class="preparation-steps">
-                    <li>Tempere os filés mignon com sal e pimenta do reino.</li>
-                    <li>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de
-                        cada lado para carne ao ponto).</li>
-                    <li>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até
-                        obter a consistência desejada.</li>
-                    <li>Sirva os medalhões com o molho de mostarda.</li>
+                <ul class="numbers">
+                    <li>01</li>
+                    <li>02</li>
+                    <li>03</li>
+                    <li>04</li>
                 </ul>
+                <ul class="preparation-steps">
+                    <p>Tempere os filés mignon com sal e pimenta do reino.</p>
+                    <p>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de
+                        cada lado para carne ao ponto).</p>
+                    <p>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até
+                            obter a consistência desejada.</p>
+                    <p>Sirva os medalhões com o molho de mostarda.</p>
+                </ul>
+                </div>
             </section>
         </section>
 
