--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="whooper">
                         <section class="porcoes">
-                            <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">  
+                            <img class="imagem" src="assets/porcao.png" alt="ícone de relógio">
                             <h3 class="texto">PORÇÕES</h3>
                             <p class="tempo">2 porções</p>
                         </section>
@@ -85,42 +85,44 @@
 
         <section class="andar-baixo">
             <div id="max-width">
-            <section class="ingredients">
-                <h2 class="the-title">Ingredientes</h2>
-                <ul class="ingredients-list">
-                    <p>2 medalhões de filé mignon</p>
-                    <p>1 colher (café) de sal</p>
-                    <p>1 colher (café) de pimenta-do-reino preta em pó</p>
-                    <p>1 colher de sopa de azeite de oliva extra virgem</p>
-                    <p>1/2 xícara de chá de creme de leite fresco</p>
-                    <p>1 colher de sopa de Mostarda Hellmann's</p>
-                </ul>
-            </section>
+                <section class="ingredients">
+                    <h2 class="the-title">Ingredientes</h2>
+                    <ul class="ingredients-list">
+                        <p>2 medalhões de filé mignon</p>
+                        <p>1 colher (café) de sal</p>
+                        <p>1 colher (café) de pimenta-do-reino preta em pó</p>
+                        <p>1 colher de sopa de azeite de oliva extra virgem</p>
+                        <p>1/2 xícara de chá de creme de leite fresco</p>
+                        <p>1 colher de sopa de Mostarda Hellmann's</p>
+                    </ul>
+                </section>
 
-            <!-- informações da preparação do receita-->
+                <!-- informações da preparação do receita-->
 
-            <section class="preparation">
-                <h2 class="the-title">Modo de Preparo</h2>
-                <ul class="numbers">
-                    <li>01</li>
-                    <li>02</li>
-                    <li>03</li>
-                    <li>04</li>
-                </ul>
-                <ul class="preparation-steps">
-                    <p>Tempere os filés mignon com sal e pimenta do reino.</p>
-                    <p>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3 minutos de
-                        cada lado para carne ao ponto).</p>
-                    <p>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir até
-                            obter a consistência desejada.</p>
-                    <p>Sirva os medalhões com o molho de mostarda.</p>
-                </ul>
-                </div>
-            </section>
+                <section class="preparation">
+                    <h2 class="the-title">Modo de Preparo</h2>
+                    <ul class="preparation-steps">
+                        <li>
+                            <span class="step-number">01</span>
+                            <p>Tempere os filés mignon com sal e pimenta do reino.</p>
+                        </li>
+                        <li>
+                            <span class="step-number">02</span>
+                            <p>Aqueça uma frigideira ou grelha com o azeite e doure os dois lados dos medalhões (3
+                                minutos de cada lado para carne ao ponto).</p>
+                        </li>
+                        <li>
+                            <span class="step-number">03</span>
+                            <p>Na mesma frigideira, acrescente o creme de leite, a mostarda Hellmann's e deixe reduzir
+                                até obter a consistência desejada.</p>
+                        </li>
+                        <li>
+                            <span class="step-number">04</span>
+                            <p>Sirva os medalhões com o molho de mostarda.</p>
+                        </li>
+                    </ul>
+            </div>
         </section>
-
-        <section class="de volta ao topo">
-            <a href="#topo">Voltar ao topo</a>
         </section>
 
     </main>
@@ -128,6 +130,7 @@
     <!-- rodapé da página -->
     <footer>
         <p>Feito pelo little second</p>
+        <p>Deus é bom! </p>
     </footer>
 </body>
 
